@@ -1,5 +1,5 @@
 graphics = antmesh.eps  ant.eps  greenmesh.eps  nc2poly.eps  phamanal0.eps  phamanal1.eps  phamanalerr0.eps  phamanalerr1.eps  poisgl.eps  pois.eps  QLapCompGL.eps  QLapComp.eps
-EXTRA_DIST = antmesh.png  ant.png  greenmesh.png  nc2poly.png  phamanal0.png  phamanal1.png  phamanalerr0.png  phamanalerr1.png  poisgl.png  pois.png  QLapCompGL.png  QLapComp.png $(graphics)
+EXTRA_DIST = antmesh.png  ant.png  greenmesh.png  nc2poly.png  phamanal0.png  phamanal1.png  phamanalerr0.png  phamanalerr1.png  poisgl.png  pois.png  QLapCompGL.png  QLapComp.png
 
 BUILT_SOURCES = $(graphics)
 
